# Ransac

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  Ransac.cbp  SOTA RANSAC.docx  TODO.txt  cmake_install.cmake  git-push.sh  log.txt  main.cpp  opencv_contribute_condition.txt  out.res  ransac  ransac.cpp  readme.markdown  remove.sh
Detector/: ReadPoints.cpp  ReadPoints.h  Reader.h  detector.cpp  detector.h
Generator/: generator.cpp  generator.h
Homographies/: DLT.cpp  Estimator.h  GetNormalizingTransformation.cpp  HomographyEstimator.h  NormalizedDLT.cpp
Homographies/ReadPoints/: ReadPoints.cpp
Homographies/matlab/: NormalizedDLT.m
RandomGenerator/: ArrayRandomGenerator.h  EvaluateRandomGenerators.h  PrimeNumberRandomGenerator.h  RandomGenerator.h  ShuffleRandomGenerator.h  SimpleRandomGenerator.h  UniformRandomGenerator.h
Ransac/: AbstractRansac.h  Drawing.h  Estimator.h  GetNormalizingTransformation.cpp  HomographyEstimator.h  HomographyMethods.h  Line.h  Line2DEstimator.cpp  Line2DEstimator.h  Model.h  NaiveRansac.cpp  NaiveRansac.h  Quality.h  Ransac.cpp  Ransac.h  Sampler.h  TerminationCriteria.h  UniformSampler.h  ransac.cpp  ransac.h
Ransac/Generator/: generator.cpp
Tests/: StatisticalResults.h  Tests.h  estimatorInitialization.cpp  samplerInitialization.cpp  statistical_results.h  test.cpp  testEssentialFitting.cpp  testFundamentalFitting.cpp  testHomographyFitting.cpp  testLineFitting.cpp  testNeighborsSearch.cpp  test_essential_fitting.cpp  test_fundamental_fitting.cpp  test_homography_fitting.cpp  test_line2d_fitting.cpp  test_random_generator.h  tests.h
Usac/: Drawing.h  EssentialMatrixEstimation.h  Evsac.cpp  Evsac.h  FundamentalMatrixEstimation.h  Line2DEstimator.h  Model.h  Napsac.cpp  Napsac.h  Prosac.cpp  Prosac.h  Quality.h  Ransac.cpp  Ransac.h  SPRT.h  Sampler.h  SevenPointsAlgorithm.h  TerminationCriteria.h  UniformSampler.h  Utils.h  Verbose.h
Usac/DLT/: DLT.h  GetNormalizingTransformation.h  NormalizedDLT.h
Usac/Estimator/: EssentialEstimator.h  Estimator.h  FundamentalEstimator.h  HomographyEstimator.h  Line2DEstimator.h
Usac/Helper/: DrawPanorama.cpp  Drawing.h  Logging.h
Usac/Homographies/: DLT.cpp  DLT.h  GetNormalizingTransformation.h  NormalizedDLT.cpp  NormalizedDLT.h
Usac/LocalOptimization/: GraphCut.cpp  GraphCut.h  GreedyLocalOptimization.h  IRLS.h  InnerLocalOptimization.h  IterativeLocalOptimization.h  LocalOptimization.h  RansacLocalOptimization.h  SortedLO.h
Usac/Quality/: LineQuality.h  Quality.h
Usac/RandomGenerator/: ArrayRandomGenerator.h  EvaluateRandomGenerators.h  PrimeNumberRandomGenerator.h  RandomGenerator.h  ShuffleRandomGenerator.h  SimpleRandomGenerator.h  UniformRandomGenerator.h  XorRandomGenerator.h
Usac/Ransac/: Init.hpp  Ransac.cpp  Ransac.h  RansacOutput.h
Usac/Sampler/: EvsacSampler.h  GradualNapsac.h  GradualNapsacSampler.h  NapsacNearSampler.h  NapsacSampler.h  ProgressiveNapsac.h  ProsacNapsac1Sampler.h  ProsacNapsac2Sampler.h  ProsacNapsacSampler.h  ProsacSampler.h  ProsacSampler2.h  ProsacSimpleSampler.h  Sampler.h  UniformSampler.h
Usac/TerminationCriteria/: ProsacTerminationCriteria.h  StandardTerminationCriteria.h  TerminationCriteria.h
Usac/Utils/: Math.cpp  Math.h  NearestNeighbors.cpp  NearestNeighbors.h  Utils.cpp  Utils.h
dataset/: Dataset.cpp  Dataset.h  GetImage.h  SaveGTModel.cpp  SaveGTModel.h  evd1.txt  evd2.txt
dataset/adelaidermf/: barrsmith_pts.txt  biscuit_pts.txt  biscuitbook_pts.txt  biscuitbookbox_pts.txt  boardgame_pts.txt  bonhall_model.txt  bonython_model.txt  bonython_pts.txt  book_pts.txt  breadcartoychips_pts.txt  breadtoy_pts.txt  breadtoycar_pts.txt  carchipscube_pts.txt  cubebreadtoychips_pts.txt  cubetoy_pts.txt  elderhallb_model.txt  elderhallb_pts.txt  game_pts.txt  gamebiscuit_pts.txt  hartley_pts.txt  johnsona_model.txt  johnsona_pts.txt  (+23 more)
detector/: Reader.cpp  detector.cpp  detector.h
doc/: compile_latex.sh  gradual_napsac.tex
generator/: generator.cpp
helper/: Logging.h
include/: nanoflann.hpp
matlab/: DLT.m  DLT.m~  DLT_eigen.m  GetNormalizingTransformation.m  NeighborsEvaluation.m  NormalizedDLT.m  RESULTS_EVD.m  RESULTS_adelaidermf.m  RESULTS_kusvod2.m  check.m  check2.m  check2.m~  checkFundamentalMatrix.m  checkFundamentalMatrix.m~  constraints.txt  ess_matrix.m  essentialMatEst.m  fundm.m  fundm.m~  mat2pts.m  mat2pts.m~  mypca.m  mypca.m~  myplot.m  points.mat  ransac.m  read_points.m  read_points.m~  save_results.m  sevenpoint.m  sprt_h.m  store_results.m  store_results.m~  store_results3.m  store_results4.m  store_results4.m~  store_results_line2d.m  svd_eig.m  test_cov.m
res/: evsac.txt  homography.txt  napsac.txt  prosac.txt  ransac.txt
results/: Essential_estimator_Uniform_sampler.txt  Fundamental_estimator_Prosac_sampler.txt  Fundamental_estimator_Uniform_sampler.txt  Homography_estimator_Napsac_sampler.txt  Homography_estimator_Prosac_sampler.txt  Homography_estimator_Uniform_sampler.txt  Line2d_estimator_GradualNapsacSampler_sampler.txt  Line2d_estimator_Napsac_sampler.txt  Line2d_estimator_Prosac_sampler.txt  Line2d_estimator_Uniform_sampler.txt  evsac.txt  fundamental.txt  homography.txt  napsac.txt  napsac_near.txt  prosac.txt  prosac_essential.txt  prosac_fundamental.txt  prosac_line2d.txt  ransac.txt  uniform_essential.txt  uniform_fundamental.txt  uniform_homography.txt  uniform_line2d.txt
src/: dlt.cpp  draw_epipolar_lines.cpp  draw_panorama.cpp  drawing.cpp  eight_points.cpp  five_points.cpp  graphcut.cpp  init.cpp  math.cpp  model.hpp  nearest_neighbors.cpp  normalized_dlt.cpp  normalizing_transformation.cpp  precomp.hpp  ransac.cpp  reader.cpp  rpoly.cpp  seven_points.cpp  utils.cpp
test/: test.cpp  test_essential_fitting.cpp  test_fundamental_fitting.cpp  test_homography_fitting.cpp  test_line2d_fitting.cpp  test_main.cpp  test_neighbors_search.cpp  test_precomp.hpp  test_random_generator.cpp  test_utils.cpp  tests.h  tests.hpp
tests/: Tests.h  testHomographies.cpp  testHomographyFitting.cpp  testLineFitting.cpp  testRansac.cpp
usac/: model.hpp  precomp.hpp  sprt.hpp
(+733 files in other folders)
